add printer init and image functionality over POST

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Receipt, Please!</title>
 </head>
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quam delectus facere inventore quibusdam nihil ut, consectetur libero natus harum voluptatibus cum non, mollitia commodi blanditiis nostrum qui temporibus iusto?
+    <canvas id="canvas"></canvas>
+
+    <script src="main.js"></script>
 </body>
 </html>
