add option for dithered text

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
                         <div class="row">
                             <input id="fontBox" type="text" value="Arial" />
                             <input id="sizeBox" type="text" value="28" />
+                            <input id="dithTextBox" type="checkbox" />
                         </div>
                         <div id="textBtn" class="btn purple action mb8">Add text</div>
                     </div>
