add support for drawing tables

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,21 @@
                         <div id="drawEndBtn" class="btn yellow action hide">Stop drawing</div>
                     </div>
                 </div>
+
+                <div class="section">
+                    <div class="btn section-btn blue">Table</div>
+                    <div class="section-content">
+                        <div class="row tableColumns">
+                            <input id="tableColumnBox" type="text" value="2" />
+                            <p>columns</p>
+                        </div>
+                        <div id="tableStartBtn" class="btn teal action">Create table</div>
+                        <div id="tableColumnWidths" class="row"></div>
+                        <div id="tableRows"></div>
+                        <div id="tableRowBtn" class="btn teal action mb8 hide">Add row</div> 
+                        <div id="tableEndBtn" class="btn purple action hide">Add table</div> 
+                    </div>
+                </div>
             </div>    
         </div>
 
