add support for drawing lines

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,14 @@
                 </div>
 
                 <div class="section">
+                    <div class="btn section-btn blue">Line</div>
+                    <div class="section-content">
+                        <input id="lineBox" type="text" value="2" />
+                        <div id="lineBtn" class="btn purple action">Add line</div>
+                    </div>
+                </div>
+
+                <div class="section">
                     <div class="btn section-btn blue">Table</div>
                     <div class="section-content">
                         <div class="row tableColumns">
