add todo list support

--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,15 @@
                 </div>
 
                 <div class="section">
+                    <div class="btn section-btn blue">List</div>
+                    <div class="section-content">
+                        <div id="listRows"></div>
+                        <div id="listRowBtn" class="btn teal action mb8">Add row</div> 
+                        <div id="listEndBtn" class="btn purple action">Add list</div> 
+                    </div>
+                </div>
+
+                <div class="section">
                     <div class="btn section-btn blue">Table</div>
                     <div class="section-content">
                         <div class="row tableColumns">
