--- a/public/index.html
+++ b/public/index.html
@@ -114,8 +114,10 @@
                     <div class="btn section-btn blue">List</div>
                     <div class="section-content">
                         <div id="listRows"></div>
-                        <div id="listRowBtn" class="btn teal action mb8">Add row</div> 
-                        <div id="listEndBtn" class="btn purple action">Add list</div> 
+                        <div class="row">
+                            <div id="listRowBtn" class="btn teal action">Add row</div> 
+                            <div id="listEndBtn" class="btn purple action ml8">Add list</div> 
+                        </div>
                     </div>
                 </div>
 
@@ -129,8 +131,10 @@
                         <div id="tableStartBtn" class="btn teal action">Create table</div>
                         <div id="tableColumnWidths" class="row"></div>
                         <div id="tableRows"></div>
-                        <div id="tableRowBtn" class="btn teal action mb8 hide">Add row</div> 
-                        <div id="tableEndBtn" class="btn purple action hide">Add table</div> 
+                        <div id="tableActions" class="row hide">
+                            <div id="tableRowBtn" class="btn teal action">Add row</div> 
+                            <div id="tableEndBtn" class="btn purple action  ml8">Add table</div> 
+                        </div>
                     </div>
                 </div>
             </div>    
